--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,6 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
@@ -65,5 +66,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
